--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,10 @@ if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
   message("using Gnu compiler")
   # use C++ 2011 standard
   set (CMAKE_CXX_FLAGS "-std=c++11")
-  # profiling
-  #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -pg")
+  # debugging symbols
+  #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+  # gperftool profiling
+  # set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITHGPERFTOOLS -lprofiler)
   # optimization
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftree-vectorize")
