ported everything to cuda; compiles and runs but results still wrong...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,6 @@ if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
   message("using Gnu compiler")
   # use C++ 2011 standard
   set (CMAKE_CXX_FLAGS "-std=c++11")
-  # gprof profiling
-  #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -pg")
-  # gperftool profiling
-  #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITHGPERFTOOLS -lprofiler -g")
   # optimization
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftree-vectorize")
@@ -73,7 +69,7 @@ if(${USE_CUDA})
   message(STATUS "using CUDA")
   find_package(CUDA REQUIRED)
   set(CUDA_PROPAGATE_HOST_FLAGS OFF)
-  set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-arch sm_30;-std=c++11;-O3;-DVERBOSE;-Xcompiler -fopenmp")
+  set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-arch=sm_30;-std=c++11;-O3;-DVERBOSE;-Xcompiler -fopenmp")
   # debugging
   #set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-g -G")
 
